[gd_scene load_steps=8 format=3 uid="uid://mv50ix7vnf2h"]

[ext_resource type="Script" uid="uid://dm6k2v222bjmp" path="res://resources/scripts/gui.gd" id="1_ga1yk"]
[ext_resource type="Theme" uid="uid://bgyt1t2scagae" path="res://config/gui.theme" id="1_prjqy"]
[ext_resource type="AudioStream" uid="uid://bqe1m10sjw2cj" path="res://resources/audio/GameOver.ogg" id="3_cefjp"]

[sub_resource type="Animation" id="Animation_t6mu4"]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8xha8"]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nq5nm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qyvdv"]
_data = {
&"FadeIn": SubResource("Animation_t6mu4"),
&"FadeOut": SubResource("Animation_8xha8"),
&"RESET": SubResource("Animation_nq5nm")
}

[node name="GUI" type="CanvasLayer" groups=["GUI"]]
process_mode = 3
script = ExtResource("1_ga1yk")

[node name="Container" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_prjqy")
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Score" type="Label" parent="Container"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0.129412, 0.129412, 0.129412, 1)
theme_override_constants/shadow_offset_x = -4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 48
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FadeScreen" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeScreen"]
libraries = {
&"": SubResource("AnimationLibrary_qyvdv")
}
autoplay = "FadeIn"

[node name="AudioGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cefjp")
volume_db = -6.4

[connection signal="animation_finished" from="FadeScreen/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="FadeScreen/AnimationPlayer" to="." method="_on_animation_player_animation_started"]
[connection signal="finished" from="AudioGameOver" to="." method="_on_audio_game_over_finished"]
